--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,54 @@
   --secondary-color: #231f20;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
   background-color: var(--primary-background-color);
+}
+
+.promo-bar {
+  background: #161f49;
+  padding: 5px 0;
+}
+.promo-bar-text {
+  font-size: 14px;
+  line-height: 1.64;
+  text-align: center;
+  letter-spacing: 0.10998px;
+  color: #ffffff;
+}
+
+.container {
+  width: 1470px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+
+.nav {
+  display: flex;
+}
+.nav-list {
+  display: flex;
 }
