--- a/css/style.css
+++ b/css/style.css
@@ -231,4 +231,19 @@ body {
   display: block;
   margin: 0 auto;
 }
-    <!-- Devices section -->
+    /* <!-- Devices section --> */
+
+.devices {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: var(--primary-background-color);
+  padding-top: 580px;
+  padding-bottom: 80px;
+  padding-left: 188px;
+  padding-right: 70px;
+}  
+
+.devices__list {
+  display: flex;
+  justify-content: space-between;
+}
+
