--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,11 @@
+/*
+ * Главный файл стилей.
+ * Все паршалы подключаются сюда.
+ */
+
+// Стили для файла с примером HTML-фрагмента
+@import './example';
+
 :root {
   --primary-background-color: #ffffff;
   --primary-text-color: #404040;
@@ -27,7 +35,7 @@ a {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 18px;
   font-weight: 400;
   font-style: normal;
@@ -106,7 +114,7 @@ body {
 }
 
 .hero-container {
-  background-image: url("../images/hero-bg.jpg");
+  background-image: url('../images/hero-bg.jpg');
   background-repeat: no-repeat;
   background-position: top center;
   /* display: flex;
@@ -192,7 +200,7 @@ body {
 }
 
 .shop-amazon__link span::after {
-  content: "";
+  content: '';
   display: block;
   width: 100%;
   height: 1px;
@@ -231,7 +239,7 @@ body {
   display: block;
   margin: 0 auto;
 }
-    /* <!-- Devices section --> */
+/* <!-- Devices section --> */
 
 .devices {
   background-color: rgba(0, 0, 0, 0.5);
@@ -240,10 +248,9 @@ body {
   padding-bottom: 80px;
   padding-left: 188px;
   padding-right: 70px;
-}  
+}
 
 .devices__list {
   display: flex;
   justify-content: space-between;
 }
-
