--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,8 +4,11 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './slick.scss';
+@import './slick-theme.scss';
 @import './example';
 @import './devices';
+@import './slider';
 
 :root {
   --primary-background-color: #ffffff;
