add styles for slider

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -1,13 +1,26 @@
-<section>
+<section class="section-slider">
+  <div class="container">
     <div class="slider">
-        <div>
-            <img src="./images/slide_1.jpg" alt="hand-near-door">
-        </div>
-        <div>
-            <img src="./images/slide_2.jpg" alt="slide_2">
-        </div>
-        <div>
-            <img src="./images/slide_3.jpg" alt="slide_3">
-        </div>
+      <div class="slider__item slider__item--slide1">
+        <h2 class="slider__title">Unlock your wifi’s potential.</h2>
+        <p class="slider__text">
+          Both eero 6 and eero Pro 6 feature a built-in Zigbee smart home hub, making it easy to
+          connect compatible devices with Alexa. So you can control certain lights, locks, plugs,
+          and more—without the need to buy separate smart home hubs for each.
+        </p>
+        <button type="button" class="btn-link slider__btn">Learn More</button>
+        <!-- <img class="slider__img" src="./images/slide_1.jpg" alt="hand-near-door" height="800" /> -->
+      </div>
+      <div class="slider__item slider__item--slide2">
+        <h2></h2>
+        <p></p>
+        <!-- <img class="slider__img" src="./images/slide_2.jpg" alt="slide_2" height="800" /> -->
+      </div>
+      <div class="slider__item slider__item--slide3">
+        <h2></h2>
+        <p></p>
+        <!-- <img class="slider__img" src="./images/slide_3.jpg" alt="slide_3" height="800" /> -->
+      </div>
     </div>
+  </div>
 </section>
