--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,242 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
+@import './all';
 @import './slick.scss';
 @import './slick-theme.scss';
 @import './example';
 @import './devices';
 @import './slider';
-
-:root {
-  --primary-background-color: #ffffff;
-  --primary-text-color: #404040;
-  --btn-color: #2468ff;
-  --secondary-color: #231f20;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-ul,
-ol {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-a {
-  text-decoration: none;
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
-  font-weight: 400;
-  font-style: normal;
-  background-color: var(--primary-background-color);
-}
-
-.promo-bar {
-  background: #161f49;
-  padding: 5px 0;
-}
-.promo-bar-text {
-  font-size: 14px;
-  line-height: 1.64;
-  text-align: center;
-  letter-spacing: 0.10998px;
-  color: #ffffff;
-}
-
-.container {
-  width: 1470px;
-  padding: 0 15px;
-  margin: 0 auto;
-}
-
-.logo {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 36px;
-}
-
-.logo > img {
-  max-height: 46px;
-}
-
-.nav {
-  display: flex;
-}
-.nav-list {
-  display: flex;
-  align-items: center;
-  margin-left: 195px;
-}
-
-.nav-item + .nav-item {
-  margin-left: 37px;
-}
-
-.nav-link {
-  line-height: 1.39;
-  text-align: center;
-  letter-spacing: 0.10998px;
-  color: var(--primary-text-color);
-}
-
-.btn-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-left: auto;
-  padding: 0 64px;
-
-  font-family: inherit;
-
-  font-size: 14px;
-  line-height: 1.79;
-  letter-spacing: 0.10998px;
-  text-transform: uppercase;
-  color: var(--primary-background-color);
-  background-color: var(--btn-color);
-}
-
-/* --------------HERO------------------ */
-.hero {
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.hero-container {
-  background-image: url('../images/hero-bg.jpg');
-  background-repeat: no-repeat;
-  background-position: top center;
-  /* display: flex;
-  flex-direction: column; */
-  position: relative;
-  padding-bottom: 277px;
-}
-
-.title {
-  font-size: 72px;
-  line-height: 1.11;
-  padding-top: 120px;
-  color: var(--primary-background-color);
-}
-
-.hero-text {
-  font-size: 21px;
-  line-height: 1.38;
-  margin-top: 24px;
-  margin-bottom: 16px;
-  color: var(--primary-background-color);
-}
-
-.transparent-btn {
-  font-size: 14px;
-  line-height: 1;
-  text-align: center;
-  letter-spacing: 0.11px;
-  text-transform: uppercase;
-  color: var(--primary-background-color);
-  background-color: tranparent;
-}
-
-.hero-btn {
-  display: inline-block;
-  margin-bottom: 87px;
-  border: 1px solid #ffffff;
-  /* margin: 0 auto; */
-  padding: 18px 37px;
-}
-
-.hero-image {
-  display: block;
-  margin: 0 auto;
-  position: absolute;
-  left: 50%;
-  right: 50%;
-  transform: translateX(-50%);
-}
-/* ------------PROMO------------- */
-.promo {
-  padding-top: 110px;
-  padding-bottom: 4px;
-  text-align: center;
-}
-
-.shop-amazon__text {
-  margin-bottom: 21px;
-  font-size: 18px;
-  line-height: 1.15;
-  text-align: center;
-  color: var(--primary-text-color);
-}
-.shop-amazon__link {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.shop-amazon__link img {
-  width: 108px;
-  height: 33px;
-  margin-bottom: 27px;
-}
-.shop-amazon__link span {
-  padding-bottom: 5px;
-  font-size: 14px;
-  line-height: 1.15;
-  text-align: center;
-  text-transform: uppercase;
-  color: #404040;
-}
-
-.shop-amazon__link span::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: var(--primary-text-color);
-}
-
-.promo__title {
-  margin-top: 116px;
-  padding-right: 355px;
-  padding-left: 356px;
-  margin-bottom: 44px;
-
-  font-size: 50px;
-  line-height: 1.2;
-
-  color: var(--primary-text-color);
-}
-
-.promo__text {
-  padding: 0 352px;
-  margin-bottom: 78px;
-  line-height: 1.4;
-
-  color: var(--primary-text-color);
-}
-
-.promo__link {
-  display: inline-block;
-  padding: 17px 37px 21px;
-
-  line-height: 1;
-  letter-spacing: 0.11px;
-}
-
-.promo__img {
-  display: block;
-  margin: 0 auto;
-}
